--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -4,8 +4,8 @@ upstream puma {
 
 server {
   # define your domain
-  # server_name foot.vote; # production
-  server_name footvote.xyz; # local - add ho /etc/hosts
+  server_name foot.vote;
+  #  server_name footvote.xyz; # local - add ho /etc/hosts
 
   # define the public application root
   root   /app/public;
