--- a/docker/production/nginx.conf
+++ b/docker/production/nginx.conf
@@ -1,57 +1,44 @@
-upstream puma {
-  server web_app:3000;
+# manual
+
+user www-data;
+# set open fd limit to 30000 https://www.cyberciti.biz/faq/linux-unix-nginx-too-many-open-files/
+worker_rlimit_nofile 30000;
+worker_processes 24;
+
+error_log /var/log/nginx/error.log;
+
+events {
+  worker_connections 4096;
 }
 
-server {
-  listen 80;
-  listen [::]:80;
-  server_name foot.vote;
-  # Redirect all traffic to SSL
-  return 301 https://$host$request_uri;
-}
+http {
+  include mime.types;
+  default_type application/octet-stream;
 
-server {
-  listen 443 ssl http2;
-  listen [::]:443;
-  server_name foot.vote;
+  log_format  trace  '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for" '
+                    'request-id:"$sent_http_x_request_id"';
 
-  ssl_certificate /etc/nginx/fullchain.pem;
-  ssl_certificate_key /etc/nginx/privkey.pem;
+  access_log /var/log/nginx/access.log trace;
 
-  ssl_session_timeout 1h;
-  ssl_session_cache shared:SSL:10m;
+  sendfile on;
+  tcp_nopush on;
+  tcp_nodelay on;
 
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-  ssl_prefer_server_ciphers on;
-  ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
-  ssl_stapling on;
-  ssl_stapling_verify on;
+  client_max_body_size 0;
+  keepalive_timeout 65;
+  keepalive_requests 5000;
 
-  resolver 8.8.8.8 [2001:4860:4860::8888];
+  gzip on;
+  gzip_http_version 1.0;
+  gzip_comp_level 2;
+  gzip_proxied any;
+  gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript application/json;
 
-  add_header Strict-Transport-Security max-age=15768000 always;
-  # add_header X-XSS-Protection "1; mode=block";
+  server_names_hash_bucket_size 64;
+  server_tokens off;
 
-  client_max_body_size 10M;
-  keepalive_timeout 10;
-
-  error_page 500 502 503 504 /500.html;
-
-  root /app/public;
-  try_files $uri/index.html $uri @puma;
-
-  location ^~ /assets/ {
-    gzip_static on;
-    access_log off;
-    expires max;
-    add_header Cache-Control public;
-  }
-
-  location @puma {
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-    proxy_set_header X-Forwarded-Proto https;
-    proxy_pass http://puma;
-  }
+  include /etc/nginx/conf.d/*.conf;
+  include /etc/nginx/sites-enabled/*;
 }
