--- a/docker/development/footvote.conf
+++ b/docker/development/footvote.conf
@@ -3,7 +3,8 @@ upstream puma {
 }
 
 server {
-  # define your domain
+  listen 80;
+  listen [::]:80;
   server_name footvote.xyz; # local - add ho /etc/hosts
 
   # define the public application root
@@ -53,4 +54,16 @@ server {
     proxy_redirect off;
     proxy_pass http://puma;
   }
+
+  location /api/websocket {
+            proxy_pass http://puma;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header HOST $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass_request_headers on;
+        }
 }
