--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - database
       - redis
     ports:
-      - "3000:3000"
+      - "3000"
     volumes:
       - .:/web
       - gems_cache:/usr/local/bundle/gems
@@ -30,16 +30,14 @@ services:
       - "6379:6379"
 
   nginx:
-    image: nginx:latest
+    image: nginx
     links:
       - web
     volumes_from:
       - web
     volumes:
-      - ./docker/production/nginx.conf:/etc/nginx/nginx.conf
-      - ./docker/production/footvote.conf:/etc/nginx/sites-enabled/footvote
-      - ./docker/production/fullchain.pem:/etc/nginx/fullchain.pem
-      - ./docker/production/privkey.pem:/etc/nginx/privkey.pem
+      - ./docker/development/nginx.conf:/etc/nginx/nginx.conf
+      - ./docker/development/footvote.conf:/etc/nginx/sites-enabled/footvote
     ports:
       - "80:80"
       - "443:443"
