--- a/docker/production/footvote.conf
+++ b/docker/production/footvote.conf
@@ -1,5 +1,5 @@
 upstream puma {
-  server web_app:3000;
+  server web:3000;
 }
 
 server {
@@ -54,7 +54,7 @@ server {
     proxy_set_header X-Forwarded-Proto https;
     proxy_pass http://puma;
   }
-  
+
   location /api/websocket {
             proxy_pass http://puma;
             proxy_http_version 1.1;
